<resources>
    <string name="app_name">Minerva</string>
    <string name="tag_line">Organize your eBooks with ease</string>
    <string name="app_info">App Info</string>
    <string name="empty"></string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="got_it">Got it</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="not_now">Not now</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="never">Never</string>
    <string name="sort_asc">Ascending</string>
    <string name="sort_desc">Descending</string>
    <string name="err_name_taken">Name already in use</string>
    <string name="sb_err_no_apps">You have no apps which can open this book’s file</string>
    <string name="sb_err_file_not_found">File not found</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="storage_permission_rationale">Minerva uses the storage permission to read your book files and to
        write backup files.</string>
    <string name="storage_permission_needed">Storage permission needed</string>
    <string name="storage_permission_perm_denied">Minerva needs the Storage permission, but you permanently denied it.
        \nOpen the App Info screen to grant it.</string>
    <string name="storage_permission_rationale_long">Minerva uses the Storage permission to read book files from your
        library folder, and to read and write backup files which will outlast un-installation.\n\nSince you permanently
        denied the Storage permission, you need to grant it from the App Info screen.</string>
    <string name="title_rate_minerva">Rate Minerva</string>
    <string name="prompt_rate_minerva">I hope you’re enjoying Minerva! Would you consider taking a minute to rate and
        review it?
        \n\nThank you :)
        \n—Brenden Kromhout</string>
    <string name="action_add_to_list">Add To List</string>
    <string name="action_clear">@string/clear</string>
    <string name="action_clear_list">Clear List</string>
    <string name="prompt_clear_list">Clear this list of all books?</string>
    <string name="action_clear_recents">Clear Recents</string>
    <string name="prompt_clear_recents">Clear all books from the recents list?</string>
    <string name="action_delete">Delete</string>
    <string name="title_delete_book">Delete Book</string>
    <string name="title_delete_books">Delete Books</string>
    <string name="title_delete_list">Delete List</string>
    <string name="title_delete_lists">Delete Lists</string>
    <string name="prompt_delete_book">Delete this book from your library?</string>
    <string name="prompt_delete_books">Delete the selected books from your library?</string>
    <string name="prompt_delete_from_device_too">Delete from device too</string>
    <string name="info_delete_from_device_permanent">This is permanent</string>
    <string name="prompt_delete_list">Delete this list?</string>
    <string name="prompt_delete_lists">Delete the selected lists?</string>
    <string name="action_rate">Rate</string>
    <string name="title_dialog_rating">Rating</string>
    <string name="action_re_import">Re-Import</string>
    <string name="title_re_import_book">Re-Import Book</string>
    <string name="title_re_import_books">Re-Import Books</string>
    <string name="prompt_re_import_book">Re-import this book?</string>
    <string name="prompt_re_import_books">Re-import the selected books?</string>
    <string name="action_remove">Remove</string>
    <string name="title_remove_book">Remove Book</string>
    <string name="title_remove_books">Remove Books</string>
    <string name="prompt_remove_from_list">Remove the selected books from this list?</string>
    <string name="prompt_remove_from_recents">Remove the selected books from the recents list?</string>
    <string name="book_removed">Book removed</string>
    <string name="action_resume_reading">Resume Reading</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_none">Select None</string>
    <string name="action_sort">Sort</string>
    <string name="action_tag">Tag</string>
    <string name="choose_library_dir">Choose Library Folder</string>
    <string name="choose_library_dir_desc">Choose the folder where Minerva should expect to find your book files.</string>
    <string name="lbl_folder">&lt;b>Folder:&lt;/b> %1$s</string>
    <string name="open_folder_chooser">Choose Folder</string>
    <string name="restore_database_desc">If you previously backed up Minerva’s database and would like to restore it,
        go ahead and choose the backup file now. Minerva will restore it once you’re done with setup.</string>
    <string name="welcome_restore_backed_up_db_prompt">Choose a database backup to restore when setup is finished</string>
    <string name="none">None</string>
    <string name="choose_database_backup">Choose Backup</string>
    <string name="ready_to_go">You’re ready to go!</string>
    <string name="ready_to_go_desc">I hope you enjoy using Minerva as much as I enjoyed making it.
        \n\nIf you run into any problems or have any suggestions, go to the “About” screen, tap the GitHub icon, and
        open an issue.
        \n\n—Brenden Kromhout—</string>
    <string name="nav_item_recent">Recent</string>
    <string name="nav_item_library">Library</string>
    <string name="nav_item_all_lists">Lists</string>
    <string name="nav_item_power_search">Power Search</string>
    <string name="nav_item_settings">@string/settings</string>
    <string name="nav_item_about">About</string>
    <string name="acc_navigation_drawer_open">Open navigation drawer</string>
    <string name="acc_navigation_drawer_close">Close navigation drawer</string>
    <string name="action_import">Import</string>
    <string name="action_filter">Filter</string>
    <string name="action_view_opts">View Options</string>
    <string name="lbl_sort_opts">Sort By</string>
    <string name="sort_title">Title</string>
    <string name="sort_author">Author</string>
    <string name="sort_time_added">Time Added</string>
    <string name="sort_rating">Rating</string>
    <string name="sort_rel_path">Relative Path</string>
    <string name="lbl_card_opts">Card Style</string>
    <string name="card_normal">Normal</string>
    <string name="card_no_cover">No Cover</string>
    <string name="card_compact">Compact</string>
    <string name="prompt_empty_library">Your library is empty and sad</string>
    <string name="action_open_importer">Open Importer</string>
    <string name="sb_no_lists">You have no lists</string>
    <string name="title_activity_import">Importer</string>
    <string name="import_header_initializing">Initializing…</string>
    <string name="import_header_ready">Ready</string>
    <string name="import_header_importing">Importing…</string>
    <string name="import_header_saving">Saving…</string>
    <string name="import_header_cancelling">Cancelling…</string>
    <string name="lbl_last_import_time">Last Successful Import</string>
    <string name="last_import_time_default">Never</string>
    <string name="lbl_choose_log">Choose Log</string>
    <string name="lbl_full_log">Full</string>
    <string name="lbl_errors_only">Errors</string>
    <string name="log_label">Log %1$s</string>
    <string name="log_label_none">No Logs</string>
    <string name="log_label_current_import_uc">For current import</string>
    <string name="log_label_current_import_lc">for current import</string>
    <string name="log_label_from_uc">From %1$s</string>
    <string name="log_label_from_lc">from %1$s</string>
    <string name="num_queued">%1$d Queued</string>
    <string name="import_red_choose_dir">Choose a library folder first</string>
    <string name="import_red_no_cancel">Saving book info; you can’t cancel now</string>
    <string name="start_full_import">Start Full Import</string>
    <string name="il_done">Done\n</string>
    <string name="fil_starting">Starting full import\n\n</string>
    <string name="ril_starting">Starting re-import\n\n</string>
    <string name="fil_finding_files">Finding files…</string>
    <string name="ril_build_file_list">Building file list…</string>
    <string name="il_found_files">Found %1$d file(s)\n\n</string>
    <string name="il_reading_files">Reading files:\n</string>
    <string name="il_read_file">Read “%1$s”\n</string>
    <string name="il_all_files_read">\nAll files read\n\n</string>
    <string name="il_saving_files">Saving file data…</string>
    <string name="il_finished">\nFinished import.</string>
    <string name="il_finished_with_errors">\nFinished import with %1$d error(s).</string>
    <string name="il_cancelled">\nImport cancelled.</string>
    <string name="il_err_generic">Error while importing and converting files</string>
    <string name="il_err_processing_file">Error while importing “%1$s”\n</string>
    <string name="ril_err_getting_file">Error getting file “%1$s”\n</string>
    <string name="ril_err_getting_files">Error while getting files</string>
    <string name="il_err_invalid_lib_dir">Invalid library folder, cancelling import</string>
    <string name="il_err_no_files">There are no files to import</string>
    <string name="il_err_realm">Realm error</string>
    <string name="sb_il_action_details">Details</string>
    <string name="sb_fil_queued">Full import queued</string>
    <string name="sb_ril_queued">Re-import queued</string>
    <string name="sb_fil_started">Full import started</string>
    <string name="sb_ril_started">Re-import started</string>
    <string name="sb_fil">Full import</string>
    <string name="sb_ril">Re-import</string>
    <string name="sb_result_finished">\u0020finished</string>
    <string name="sb_result_cancelled">\u0020cancelled</string>
    <string name="sb_il_results_zero">; found nothing to import</string>
    <plurals name="sb_il_results">
        <item quantity="one">; processed %1$d book out of %2$d</item>
        <item quantity="other">; processed %1$d books out of %2$d</item>
    </plurals>
    <plurals name="sb_il_just_error_results">
        <item quantity="one">; had %1$d error</item>
        <item quantity="other">; had %1$d errors</item>
    </plurals>
    <plurals name="sb_il_and_error_results">
        <item quantity="one">, and had %1$d error</item>
        <item quantity="other">, and had %1$d errors</item>
    </plurals>
    <plurals name="sb_il_more_queued">
        <item quantity="one">. There is %1$d more import run queued</item>
        <item quantity="other">. There are %1$d more import runs queued</item>
    </plurals>
    <string name="action_edit">Edit</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_as_smart_list">Save As Smart List</string>
    <string name="title_activity_book_list">Book List</string>
    <string name="title_reorder_mode">Reorder Mode</string>
    <string name="action_card_type">Card Style</string>
    <string name="action_reorder">Reorder</string>
    <string name="action_move_to_top">Move To Top</string>
    <string name="action_move_to_bottom">Move To Bottom</string>
    <string name="action_new_list">New List</string>
    <string name="title_rename_list">Rename List</string>
    <string name="title_rename_smart_list">Rename Smart List</string>
    <string name="title_edit_smart_list">Edit Smart List</string>
    <string name="title_convert_to_normal_list">Convert to Normal List</string>
    <string name="title_delete_smart_list">Delete Smart List</string>
    <string name="action_show_query">Show Query</string>
    <string name="action_mark_as">Mark As</string>
</resources>