<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_tag"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_tags"
            android:title="@string/action_tag"/>

    <item
            android:id="@+id/action_rate"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_stars"
            android:title="@string/action_rate"/>

    <item
            android:id="@+id/action_select_all"
            app:showAsAction="never"
            android:icon="@drawable/ic_select_all"
            android:title="@string/action_select_all"/>

    <item
            android:id="@+id/action_select_none"
            app:showAsAction="never"
            android:icon="@drawable/ic_select_none"
            android:title="@string/action_select_none"/>

    <item
            android:id="@+id/action_move_to_top"
            app:showAsAction="never"
            android:icon="@drawable/ic_move_to_top"
            android:title="@string/action_move_to_top"/>

    <item
            android:id="@+id/action_move_to_bottom"
            app:showAsAction="never"
            android:icon="@drawable/ic_move_to_bottom"
            android:title="@string/action_move_to_bottom"/>

    <item
            android:id="@+id/action_re_import"
            app:showAsAction="never"
            android:icon="@drawable/ic_import"
            android:title="@string/action_re_import"/>

    <item
            android:id="@+id/action_remove"
            app:showAsAction="never"
            android:icon="@drawable/ic_remove_filled"
            android:title="@string/action_remove"/>
</menu>