<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_read"
            app:showAsAction="never"
            android:icon="@drawable/ic_read"
            android:title="@string/action_resume_reading"/>

    <item
            android:id="@+id/action_add_to_list"
            app:showAsAction="never"
            android:icon="@drawable/ic_list_add"
            android:title="@string/action_add_to_list"/>

    <item
            android:id="@+id/action_tag"
            app:showAsAction="never"
            android:icon="@drawable/ic_tags"
            android:title="@string/action_tag"/>

    <item
            android:id="@+id/action_rate"
            app:showAsAction="never"
            android:icon="@drawable/ic_stars"
            android:title="@string/action_rate"/>

    <item
            android:id="@+id/action_mark_as"
            app:showAsAction="never"
            android:icon="@drawable/ic_mark"
            android:title="@string/action_mark_as"/>

    <item
            android:id="@+id/action_re_import"
            app:showAsAction="never"
            android:icon="@drawable/ic_import"
            android:title="@string/action_re_import"/>

    <item
            android:id="@+id/action_delete"
            app:showAsAction="never"
            android:icon="@drawable/ic_delete"
            android:title="@string/action_delete"/>
</menu>