<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_show_query"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_lightbulb_filled"
            android:title="@string/action_show_query"/>

    <item
            android:id="@+id/action_card_type"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_eye"
            android:title="@string/action_card_type"/>

    <item
            android:id="@+id/action_rename_smart_list"
            app:showAsAction="never"
            android:icon="@drawable/ic_rename"
            android:title="@string/title_rename_smart_list"/>

    <item
            android:id="@+id/action_edit_smart_list"
            app:showAsAction="never"
            android:icon="@drawable/ic_edit"
            android:title="@string/title_edit_smart_list"/>

    <item
            android:id="@+id/action_convert_to_normal_list"
            app:showAsAction="never"
            android:icon="@drawable/ic_list"
            android:title="@string/title_convert_to_normal_list"/>

    <item
            android:id="@+id/action_delete_smart_list"
            app:showAsAction="never"
            android:icon="@drawable/ic_delete"
            android:title="@string/title_delete_smart_list"/>
</menu>