<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_reorder"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_reorder"
            android:title="@string/action_reorder"/>

    <item
            android:id="@+id/action_card_type"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_eye"
            android:title="@string/action_card_type"/>

    <item
            android:id="@+id/action_rename_list"
            app:showAsAction="never"
            android:icon="@drawable/ic_rename"
            android:title="@string/title_rename_list"/>

    <item
            android:id="@+id/action_clear"
            app:showAsAction="never"
            android:icon="@drawable/ic_clear_all"
            android:title="@string/action_clear"/>

    <item
            android:id="@+id/action_delete_list"
            app:showAsAction="never"
            android:icon="@drawable/ic_delete"
            android:title="@string/title_delete_list"/>
</menu>