<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_recent"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_item_recent"/>
        <item
                android:id="@+id/nav_library"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_item_library"/>
        <item
                android:id="@+id/nav_lists"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_item_lists"/>
        <item
                android:id="@+id/nav_power_search"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_item_power_search"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_item_settings"/>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_item_about"/>
        </menu>
    </item>

</menu>
