<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ImportActivity">

    <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

        <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/import_header_initializing"
                style="?android:attr/textAppearanceLarge"/>

        <TextView
                android:id="@+id/lbl_last_import_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_last_import_time"
                style="@style/LabelText"/>

        <TextView
                android:id="@+id/last_import_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/last_import_time_default"/>

        <ProgressBar
                android:id="@+id/import_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                style="?android:attr/progressBarStyleHorizontal"/>

        <LinearLayout
                android:id="@+id/label_and_num_queued"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/lbl_log"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_label_none"
                    style="@style/LabelText"/>

            <TextView
                    android:id="@+id/num_queued"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_queued"
                    style="@style/LabelText"/>
        </LinearLayout>

        <FrameLayout
                android:id="@+id/import_logs_cont"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <ScrollView
                    android:id="@+id/import_log_cont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical">

                <TextView
                        android:id="@+id/import_log"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Current Importer Status"/>
            </ScrollView>

            <ScrollView
                    android:id="@+id/import_elog_cont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                <TextView
                        android:id="@+id/import_elog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Current Importer Error Log"/>
            </ScrollView>
        </FrameLayout>

        <LinearLayout
                android:id="@+id/import_log_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/lbl_full_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_full_log"
                    style="@style/BookInfoTextSmall"/>

            <Switch
                    android:id="@+id/import_log_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

            <TextView
                    android:id="@+id/lbl_errors_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_errors_only"
                    style="@style/BookInfoTextSmall"/>

            <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <Button
                    android:id="@+id/choose_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_choose_log"
                    android:backgroundTint="@color/colorAccent"/>
        </LinearLayout>

        <TextView
                android:id="@+id/import_red_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="@string/import_red_no_cancel"
                android:visibility="gone"
                tools:visibility="visible"/>

        <Button
                android:id="@+id/import_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_full_import"
                android:enabled="false"/>
    </LinearLayout>
</FrameLayout>
