<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

    <EditText
            android:id="@+id/tag_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:maxLines="1"
            android:hint="@string/action_filter"
            android:drawableEnd="@drawable/ic_clear"/>

    <com.bkromhout.realmrecyclerview.RealmRecyclerView
            android:id="@id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tag_filter"
            android:layout_above="@id/buttons"/>

    <android.support.v7.widget.ButtonBarLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/cancel"/>

        <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/save"/>
    </android.support.v7.widget.ButtonBarLayout>
</RelativeLayout>